--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
   },
   "lint-staged": {
     "*.{js,ts,jsx,tsx}": [
-      "yarn prettier-format",
+      "yarn prettier --config .prettierrc.js --write",
       "eslint --fix",
       "git add"
     ]
