--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "husky": "4.3.8",
     "jest": "^29.2.1",
     "jest-styled-components": "^7.1.1",
+    "jest-transformer-svg": "^2.0.1",
     "lint-staged": "^14.0.1",
     "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^2.4.1",
